Refactor: split CLI/MCP, add Kitty PiP positioning and inactivity timer
- Split bin/idle-tv to route play/pause/stop/status to CLI mode
  and everything else to MCP server mode
- Add src/cli.js for lightweight hook-driven control (no server startup)
- Add inactivity timer (5s): resumes on tool call, pauses on idle
- Add getKittyBounds() via Swift CoreGraphics to detect Kitty window
- Add getPipGeometry() to position PiP in Kitty's bottom-right corner
- Launch mpv with --input-cursor-passthrough for native click-through
- Update build script to produce dist/cli.js and dist/mcp-server.js

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "idle-tv": "bin/idle-tv"
   },
   "scripts": {
-    "build": "esbuild src/mcp-server.js --bundle --platform=node --target=node18 --outfile=dist/idle-tv.js --format=cjs --banner:js='#!/usr/bin/env node'",
+    "build": "esbuild src/mcp-server.js --bundle --platform=node --target=node18 --outfile=dist/mcp-server.js --format=cjs && esbuild src/cli.js --bundle --platform=node --target=node18 --outfile=dist/cli.js --format=cjs",
     "prepublishOnly": "npm run build"
   },
   "keywords": [
